--- a/main-files/main.css
+++ b/main-files/main.css
@@ -1,4 +1,4 @@
 /* This file is part of Smartschool Achievements.
 Don't use this file without permission
-Author: @superman2775
+Author: @superman2775 + @broodje565
 */
